[package]
name = "proxybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "net", "macros"] }
tgbot = { version = "0.23" }
dotenvy = "*"
anyhow = "*"
sqlite = "*"
env_logger = "*"
log = "*"
