[package]
name = "proxybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros"] }
tgbot = { version = "0.30", features = ["webhook"] }
dotenvy = "0.15"
anyhow = "1.0"
sqlite = "0.36"
log = "0.4"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "tracing-log",
] }
